[metadata]
name = vt-timetable
version = 0.1.0
author = Leo DiPerna
author_email = dipernalz@vt.edu
description = A module for scraping the Virginia Tech Timetable of Classes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dipernalz/vt-timetable
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.4
install_requires =
    lxml
    requests
    pandas

[options.packages.find]
where = src